1). Insert Articles to locally 2). Get the Articles from local DB with PagingDataAdapter 3). List out the Articles by RecyclerView 4). Code changes based on logical

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
-    <string name="app_name">HackerNews</string>
+    <string name="app_name">Hacker News</string>
     <string name="something_went_wrong">Something went wrong!</string>
+    <string name="stories_not_found">Stories not found!</string>
+    <string name="no_internet">No internet!</string>
+    <string name="retry">Retry</string>
 </resources>
