--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="stories_not_found">Stories not found!</string>
     <string name="no_internet">No internet!</string>
     <string name="retry">Retry</string>
+    <string name="search">Search</string>
+    <string name="title_colon">Title:</string>
+    <string name="by_colon">By:</string>
+
+
 </resources>
