--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="search">Search</string>
     <string name="title_colon">Title:</string>
     <string name="by_colon">By:</string>
+    <string name="page_not_found">Page not found!</string>
 
 
 </resources>
